# countdown-problem

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/grpo/: test.csv  train.csv
data/sft/: train.csv
models/sft/runs/Jan29_23-23-11_OnlyNLP-1/: events.out.tfevents.1769703791.OnlyNLP-1.23220.0
models/sft/runs/Jan29_23-34-19_OnlyNLP-1/: events.out.tfevents.1769704459.OnlyNLP-1.20236.0
models/sft/runs/Jan29_23-39-24_OnlyNLP-1/: events.out.tfevents.1769704764.OnlyNLP-1.20308.0
models/sft/runs/Jan29_23-41-30_OnlyNLP-1/: events.out.tfevents.1769704890.OnlyNLP-1.18440.0
outputs/2026-01-29/22-59-22/.hydra/: hydra.yaml
outputs/2026-01-29/23-21-12/.hydra/: hydra.yaml
outputs/2026-01-29/23-22-43/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-29/23-33-47/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-29/23-38-55/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-29/23-41-02/.hydra/: config.yaml  hydra.yaml
src/config/grpo/: config.yaml
src/config/grpo/dataset/: default.yaml
src/config/grpo/model/: qwen2.5-3b.yaml
src/config/grpo/training/: default.yaml
src/config/sft/: config.yaml
src/config/sft/dataset/: default.yaml
src/config/sft/model/: qwen2.5-3b.yaml
src/config/sft/training/: default.yaml
src/dataset/: __init__.py  grpo.py  sft.py
src/examples/: calculate_accuracy.py  run_model.py
src/scripts/: combine_dataset.py  filter_valid_arithmetic.py  generate_training_dataset_grpo.py  generate_training_dataset_sft.py  split_dataset.py
src/training/grpo/: train_grpo.py  train_grpo_hydra.py
src/training/sft/: train_sft.py  train_sft_hydra.py
src/utils/: arithmetics.py  caching.py  inference.py  rewards.py  string_helper.py
